# Quantum-random-vLLM-sampler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.zenflow/: settings.json
deployments/: .gitignore  README.md
deployments/_template/: .env.example  README.md  docker-compose.yml
deployments/firefly-1/: .env.example  README.md  docker-compose.yml
deployments/openentropy/: README.md
deployments/urandom/: .env.example  README.md  docker-compose.override.yml  docker-compose.yml
examples/docker/: Dockerfile.entropy-server  Dockerfile.vllm  docker-compose.yml
examples/open-webui/: README.md  qr_sampler_filter.json  qr_sampler_filter.py
examples/servers/: qrng_template_server.py  simple_urandom_server.py  timing_noise_server.py
examples/systemd/: qr-entropy-server.env  qr-entropy-server.service
qc_sampler/: __init__.py  config.py  entropy_source.py  exceptions.py  factory.py  processor.py  sampling_logger.py  signal_amplifier.py  temperature_strategy.py  token_selector.py
qc_sampler/proto/: __init__.py  entropy_service.proto  entropy_service_pb2.py  entropy_service_pb2_grpc.py
src/qr_sampler/: __init__.py  config.py  (+2 more)
tests/: conftest.py  test_config.py  test_entropy_source.py  test_processor.py  test_signal_amplifier.py  test_statistical_properties.py  test_temperature_strategy.py  test_token_selector.py  test_wire_format.py
(+63 files in other folders)
