[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qc-sampler"
version = "0.1.0"
description = "Quantum consciousness token sampling plugin for vLLM V1"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "numpy>=1.24.0",
    "protobuf>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy>=1.10.0",
]

[project.entry-points."vllm.logits_processors"]
quantum_consciousness = "qc_sampler.processor:QuantumConsciousnessProcessor"

[tool.setuptools.packages.find]
include = ["qc_sampler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
